[package]
name = "async_rudp"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

[lib]
name = "async_rudp"
path = "src/lib/lib.rs"

[[bin]]
name = "async_rudp_example"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
async-trait = "0.1.67"
rand = "0.8.5"
tokio-util = { version = "0.7.7", features = ["full"] }
tokio-stream = "0.1"
tokio-codec = "0.1.2"
bytes = "1.0.0"

[profile.test]
opt-level = 3
